syntax = "proto3";

package auth;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RegisterCredentials(RegisterCredentialsRequest) returns (RegisterCredentialsResponse);
}

message Tokens {
    string access_token = 1;
    string refresh_token = 2;
    google.protobuf.Timestamp access_token_expires_at = 3;
    google.protobuf.Timestamp refresh_token_expires_at = 4;
}

message RegisterCredentialsRequest {
    string user_id = 1;
    string password = 2;
}

message RegisterCredentialsResponse {
    Tokens tokens = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2; 
}

message LoginResponse {
    Tokens tokens = 1;
}